CHANGES IN VERSION 2.7.11
------------------------
 o check whether input geneList is sorted <2015-09-22, Tue>
 o bug fixed in EXTID2NAME, keytype is TAIR for arabidopsis and ORF for malaria <2015-08-26, Wed>
 
CHANGES IN VERSION 2.7.10
------------------------
 o add Giovanni Dall'Olio as contributor in author list. <2015-07-21, Tue>
 o update NCG data to version cancergenes_4.9.0_20150720 contributed by Giovanni Dall'Olio.
   https://github.com/GuangchuangYu/DOSE/pull/8 <2015-07-21, Tue>
 o geneInCategory may simplify to vector by R in very rare case,
   which violate the assumption of list in S4 validation checking.
   This issue was fixed. <2015-07-19, Sun>
 
CHANGES IN VERSION 2.7.9
------------------------
 o add citation of ChIPseeker <2015-07-09, Thu>
 o add 'Disease analysis of NGS data' section in vignette <2015-06-29, Mon>
 o convert vignette from Rnw to Rmd <2015-06-24, Wed>
 
CHANGES IN VERSION 2.7.8
------------------------
 o dotplot for enrichResult <2015-06-21, Sun>
 
CHANGES IN VERSION 2.7.7
------------------------
 o speed up by using sample.int instead of sample <2015-06-04, Thu>
 o add seed = FALSE to control reproduciblility of gsea function.
   to make result reproducible, explicitly set seed=TRUE <2015-06-04, Thu>
    - contributed by Vlad, see https://github.com/GuangchuangYu/DOSE/pull/5/
    - modified by Guangchuang
   
CHANGES IN VERSION 2.7.6
------------------------
 o bug fixed in cnetplot legend contributed by Vladislav Petyuk <2015-05-28, Thu>
 
CHANGES IN VERSION 2.7.5
------------------------
 o update vignette <2015-05-15, Fri>

CHANGES IN VERSION 2.7.4
------------------------
 o update permutation test with pvalue = (K+1)/(N+1) instead of K/N, 
   so that p value will never be 0 <2015-05-12, Tue>

CHANGES IN VERSION 2.7.3
------------------------
 o add setType slot in gseaResult <2015-05-15, Tue>
 o add universe and geneSets slots in enrichResult <2015-05-05, Tue>
 
CHANGES IN VERSION 2.7.2
------------------------